2005-07-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix (pthread_join, mutex_timedlock_internal): Add
	missing tests on XNBREAK and XNRMID conditions.

	* include/nucleus/queue.h: Rework debug macros to give better
	help upon bug detection.

	* nucleus/intr.c (xnintr_init): 
	* arch/generic/hal/generic.c (rthal_irq_request): Allow for
	installing a user-defined acknowledge routine.

2005-07-09  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Make -Wstrict-prototypes only part of the RTAI
	build flags for user-space components, excluding it from the
	common application flags returned by rtai-config.

	* nucleus/pod.c (xnpod_fatal_helper): Add PID information.

	* skins/posix/syscall.c (__mutex_init): Make all user-space
	mutexes recursive.

	* nucleus/shadow.c (xnshadow_harden): Make sure to be pulled out
	of the Linux runqueue, before the gatekeeper starts processing the
	shadow resumption request.

	* skins/posix/lib/thread.c (__pthread_trampoline): Fix race window
	between the parent release point and the actual use of the stacked
	start/cookie args.

2005-07-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-generic/hal.h: Discard Linux stage interrupt
	state manipulators: they are unused and are better not needed.

	* include/nucleus/asm-*/system.h: Discard unused
	xnarch_read_timings(). LTT support is expected to help us
	regarding this.

2005-07-04  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/syscall.h: Add __xn_strncpy_from_user().

	* arch/i386/hal/x86.c (rthal_strncpy_from_user): Add.

2005-07-03  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.8.2 (Satch Boogie)

2005-07-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r12c3.

	* skins/posix/syscalls.c: Finalize mq call wrappers.

	* skins/vxworks/demos/koan.c: Add new VxWorks demo.

2005-06-29  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r12c2.

2005-06-27  Philippe Gerum  <rpm@xenomai.org>
